# rust-rknn

./: .gitignore  Cargo.toml
rknn-toolkit2/: Cargo.toml
rknnlite-toolkit2/: Cargo.toml
rknnlite-toolkit2/src/examples/: common.rs  utils.rs
rknpu2-sys/: Cargo.toml  build.rs
rknpu2-sys/headers/: wrapper.h
rknpu2-sys/src/: lib.rs
